Updated build instructions